Сохрание проекта, обновление

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>goit-markup-hw-01</title>
 </head>
 <body>
     <header>
@@ -53,9 +53,9 @@
             <div>
                 <h2>Чем мы занимаемся</h2>
                 <ul>
-                    <li> <img src="./pictures/img_1.jpg" alt="Алгоритмы"> </li>
-                    <li> <img src="./pictures/img_2.jpg" alt="Мобильная разработка"> </li>
-                    <li> <img src="./pictures/img_3.jpg" alt="Дизайн"> </li>
+                    <li> <img src="./pictures/img_1.jpg" width="270" alt="Алгоритмы"> </li>
+                    <li> <img src="./pictures/img_2.jpg" width="270" alt="Мобильная разработка"> </li>
+                    <li> <img src="./pictures/img_3.jpg" width="270" alt="Дизайн"> </li>
                 </ul>
             <section>
                 <h2>Наша команда</h2>
