--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>goit-markup-hw-01</title>
+    <title lang="en">goit-markup-hw-01</title>
 </head>
 <body>
     <header>
@@ -14,15 +14,15 @@
             <li><a href="#">Портфолио</a></li>
             <li><a href="#">Контакты</a></li>
         </ul>
-        <ul>
-            <li>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
-            <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-        </ul>                   
     </nav>
+    <ul>
+        <li>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+        <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+    </ul>                   
     </header>
 
     <main>
@@ -53,30 +53,30 @@
             <div>
                 <h2>Чем мы занимаемся</h2>
                 <ul>
-                    <li> <img src="./pictures/img_1.jpg" width="270" alt="Алгоритмы"> </li>
-                    <li> <img src="./pictures/img_2.jpg" width="270" alt="Мобильная разработка"> </li>
-                    <li> <img src="./pictures/img_3.jpg" width="270" alt="Дизайн"> </li>
+                    <li> <img src="./images/img_1.jpg" width="270" alt="Алгоритмы"> </li>
+                    <li> <img src="./images//img_2.jpg" width="270" alt="Мобильная разработка"> </li>
+                    <li> <img src="./images//img_3.jpg" width="270" alt="Дизайн"> </li>
                 </ul>
             <section>
                 <h2>Наша команда</h2>
                 <ul>
                     <li>
-                        <img src="./pictures/img_1_1.jpg"   width="270" alt="Product Designer" title="Product Designer">
+                        <img src="./images//img_1_1.jpg"   width="270" alt="Product Designer" title="Product Designer">
                         <h3>Игорь Демьяненко</h3>
                         <p lang="en" >Product Designer</p>
                     </li>
                     <li>
-                        <img src="./pictures/img_1_2.jpg"   width="270" alt="Frontend Developer" title="Frontend Developer">
+                        <img src="./images//img_1_2.jpg"   width="270" alt="Frontend Developer" title="Frontend Developer">
                         <h3>Ольга Репина</h3>
                         <p lang="en" >Frontend Developer</p>
                     </li>    
                     <li>
-                        <img src="./pictures/img_1_3.jpg"  width="270" alt="Marketing" title="Marketing">
+                        <img src="./images//img_1_3.jpg"  width="270" alt="Marketing" title="Marketing">
                         <h3>Николай Тарасов</h3>
                         <p lang="en" >Marketing</p>
                     </li>
                     <li>
-                        <img src="./pictures/img_1_4.jpg"  width="270" alt="UI Designer" title="UI Designer">
+                        <img src="./images//img_1_4.jpg"  width="270" alt="UI Designer" title="UI Designer">
                         <h3>Михаил Ермаков</h3>
                         <p lang="en">UI Designer</p>
                     </li>
